<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleHeader"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="20sp"
            android:ellipsize="end"
            android:textStyle="bold"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/history"
                android:layout_width="50dp"
                android:padding="10dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_history_black_24dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:onClick="mostraCronologia"/>

            <ImageButton
                android:visibility="gone"
                android:id="@+id/buttonCancella"
                android:layout_width="50dp"
                android:padding="5dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_delete_black_24dp"
                android:background="@color/colorPrimary"
                android:scaleType="fitCenter"
                android:onClick="cancellaNotifica"/>

        </LinearLayout>

    </LinearLayout>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="17sp"
                android:textAllCaps="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:textColor="#494949"
                android:inputType="textCapSentences"
                android:id="@+id/titolo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAllCaps="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:textColor="#494949"
                android:inputType="textCapSentences"
                android:id="@+id/descrizione"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/permanent_notification"
                android:textSize="17sp"
                android:id="@+id/permanente"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCreaNotifica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:text="@string/create_notification"
        android:onClick="creaNotifica"
        />

</LinearLayout>